# PaperQuay

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  TRADEMARKS.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
.backups/: paperquay-current-20260427-085048.manifest.txt  paperquay-current-20260427-085104.manifest.txt
.github/: release-notes.md
.github/workflows/: release.yml
.mojibake-backup/: AGENTS.md  README.md
.tmp-markdown-check/: markdown.js
electron/: afterPack.cjs  backend.cjs  build.cjs  localPdfProtocol.cjs  main.cjs  preload.cjs
electron/backend/: aiCommands.cjs
packaging/arch/: PKGBUILD  paperquay.desktop  paperquay.sh
public/onboarding/: welcome.aux  welcome.md  welcome.out  welcome.synctex  welcome.tex
src/: main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/installer/: zh-CN.wxl
src-tauri/src/: commands.rs  lib.rs  main.rs  startup.rs
src-tauri/src/commands/: agent.rs  file.rs  library.rs  llm.rs  metadata.rs  mineru.rs  mod.rs  qa.rs  rag.rs  summary.rs  translation.rs  webdav_backup.rs  zotero.rs
src-tauri/src/commands/rag/: commands.rs  models.rs  schema.rs  vector_tables.rs
src-tauri/src/commands/translation/: tests.rs
src/app/: App.tsx  appEvents.ts  index.css
src/components/: EmptyState.tsx
src/hooks/: useWheelScrollDelegate.ts
src/i18n/: uiLanguage.tsx
src/services/: assets.ts  desktop.ts  library.ts  libraryAgent.ts  libraryAgentPlanHelpers.ts  llm.ts  localRag.ts  metadata.ts  mineru.ts  pdfMetadata.ts  qa.ts  (+7 more)
tests/: agentRunningSessions.test.ts  agentSessionState.test.ts  documentReaderCache.test.ts  highlightScroll.test.ts  importMetadata.test.ts  librarySourceEncoding.test.ts  mineruContinuations.test.ts  noteEditorUtils.test.ts  paperTaskState.test.ts  readerTranslation.test.ts  wheelScroll.test.ts
(+117 files in other folders)
